--- a/site-psico/src/components/Header.css
+++ b/site-psico/src/components/Header.css
@@ -1,13 +1,13 @@
 header {
-    background: rgb(0,235,188);
     background: linear-gradient(315deg, rgba(0,235,188,1) 0%, rgba(0,25,98,1) 100%);
     color: #fff;
     padding: 4rem 0;
     text-align: center;
     left: 0;
     right: 0;
-    width: 100%;
+    max-width: 100vw; 
 }
+
 
 header h1 {
     font-size: 2.5rem;
