--- a/site-psico/src/index.css
+++ b/site-psico/src/index.css
@@ -10,7 +10,9 @@ body {
     line-height: 1.6;
     margin: 0;
     width: 100%;
+    overflow-x: hidden; 
 }
+
 
 
 
